fixed header being static to page and not scrolling. Fixed overflow and padding issues in css file

--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -1,3 +1,8 @@
+html {
+  margin: 0;
+  padding: 0;
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -24,10 +29,12 @@ a:hover {
 
 body {
   margin: 0;
+  padding: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 h1 {
